# project

./: .gitignore  README.md  main.py  pyproject.toml
data/: __init__.py  load_documents.py  vibecode.md
notebooks/: 01-overview.ipynb
src/: config.py  embedder.py  graph.py  main.py  nodes.py  vector_store.py
src/generation/: generator.py
src/retrieval/: retriever.py
